--- a/CS60DN46/Ch31WebForms/BlankApp/HTMLPage1.html
+++ b/CS60DN46/Ch31WebForms/BlankApp/HTMLPage1.html
@@ -8,6 +8,13 @@
 <body>
     <form id="defaultPage">
         <!-- Insert web UI content here -->
+        abcdefg;
+        ABCDEFG;
+        <br />
+        <input id="Text1" type="text" />
+        <br />
+        aaaaccc
+        <h2>Inside the Form 1</h2>
     </form>
 </body>
 </html>
