--- a/CS60DN46/Ch31WebForms/BlankApp/HTMLPage1.html
+++ b/CS60DN46/Ch31WebForms/BlankApp/HTMLPage1.html
@@ -6,15 +6,20 @@
     <title>This is my simple web page</title>
 </head>
 <body>
+    <h1>Simple HTML Page</h1>
+    <p>
+        <br />
+        <i>Please enter a message</i>
+    </p>
     <form id="defaultPage">
-        <!-- Insert web UI content here -->
-        abcdefg;
-        ABCDEFG;
-        <br />
-        <input id="Text1" type="text" />
-        <br />
-        aaaaccc
-        <h2>Inside the Form 1</h2>
+        <p>
+        Your Message:
+        <input id="txtUserMessage" type="text" />
+        </p>
+        <p>
+        <input id="btnShow" type="button" value="Show!" />
+        <input id="btnReset" type="reset" value="Reset" />
+        </p>
     </form>
 </body>
 </html>
