--- a/CS60DN46/Ch31WebForms/BlankApp/HTMLPage1.html
+++ b/CS60DN46/Ch31WebForms/BlankApp/HTMLPage1.html
@@ -6,6 +6,12 @@
     <title>This is my simple web page</title>
 </head>
 <body>
+    <script type = "text/javascript">
+        function btnShow_onclick() {
+            alert(window.txtUserMessage.value);
+        }
+    </script>
+    
     <h1>Simple HTML Page</h1>
     <p>
         <br />
@@ -17,7 +23,7 @@
         <input id="txtUserMessage" type="text" />
         </p>
         <p>
-        <input id="btnShow" type="button" value="Show!" />
+        <input id="btnShow" type="button" value="Show!" onclick="return btnShow_onclick()" />
         <input id="btnReset" type="reset" value="Reset" />
         </p>
     </form>
