--- a/CS60DN46/Ch31WebForms/BlankApp/HTMLPage1.html
+++ b/CS60DN46/Ch31WebForms/BlankApp/HTMLPage1.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <script type = "text/javascript">
+        // <![CDATA[
         function btnShow_onclick() {
             alert(window.txtUserMessage.value);
         }
+        // ]])
     </script>
     
     <h1>Simple HTML Page</h1>
