--- a/CS60DN46/Ch31WebForms/BlankApp/TopPage.html
+++ b/CS60DN46/Ch31WebForms/BlankApp/TopPage.html
@@ -21,13 +21,22 @@
     </p>
     <form id="defaultPage" action="http://localhost/Cars/MyAspNetPage.aspx" method="GET">
         <p>
-        Your Message:
-        <input id="txtUserMessage" type="text" />
+            Primary Message:
+            <input id="txtUserMessage" type="text" />
         </p>
         <p>
-        <input id="btnShow" type="button" value="Show!" onclick="return btnShow_onclick()" />
-        <input id="btnReset" type="reset" value="Reset" />
-        <input id="btnPostBack" type="submit" value="Post to Server!"/>
+            <input id="btnShow" type="button" value="Show!" onclick="return btnShow_onclick()" />
+            <input id="btnReset" type="reset" value="Reset" />
+            <input id="btnPostBack" type="submit" value="Post to Server!" />
+        </p>
+        <hr />
+        <p>
+            Secondary Message:
+            <input id="txtUserMessage2" type="text" />
+        </p>
+        <p>
+            Additional Message:
+            <input id="txtUserMessage3" type="text" />
         </p>
     </form>
 </body>
